# voz-dictator

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: release.yml
apps/desktop/: index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/desktop/src/: App.tsx  index.css  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: dictionary.rs  hotkey.rs  lib.rs  main.rs  settings.rs  tray.rs  usage.rs
apps/desktop/src-tauri/src/audio/: capture.rs  resample.rs  vad.rs
apps/desktop/src-tauri/src/cleanup/: llm.rs  prompts.rs
apps/desktop/src-tauri/src/injection/: accessibility.rs  mod.rs  paste.rs
apps/desktop/src-tauri/src/stt/: assemblyai.rs  deepgram.rs  groq.rs  local.rs  mod.rs
apps/desktop/src/components/: Dashboard.tsx  FloatingPill.tsx  HotkeyConfig.tsx  LanguageSelector.tsx  ModeToggle.tsx  Onboarding.tsx  SettingsPanel.tsx  UsageBar.tsx  Waveform.tsx
apps/desktop/src/hooks/: useRecording.ts  useSettings.ts  useTranscription.ts
apps/desktop/src/lib/: constants.ts  tauri-commands.ts
apps/web/: package.json
apps/web/src/layouts/: Layout.astro
apps/web/src/pages/: index.astro
apps/web/src/styles/: global.css
